@@ -1,5 +1,6 @@
 [B]0.9.10[/B]
 Hopeful fix for widgets bug
+Characterart plus Awards on info
 
 [B]0.9.9[/B]
 Add FPS icon and indicator on videoosd info
